# FFmpegTools

./: FFmpegTools_ijkplayer_迁移计划.docx  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/ffmpegtools/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ffmpeg_cmd.c  ffmpeg_cmd.h  ffmpeg_thread.c  native-lib.cpp
app/src/main/cpp/ffmpeg/: cmdutils.c  config.h  ffmpeg.c  ffmpeg.h  ffmpeg_opt.c
app/src/main/java/com/example/ffmpegtools/: FFmpegCmd.java  FFmpegFactory.java  MainActivity.java  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/ffmpegtools/: ExampleUnitTest.java
docs/examples/: encode_audio.c  encode_video.c  remuxing.c
ffmpeg-cmd/: build.gradle  gradle.properties
ffmpeg-cmd/src/androidTest/java/com/example/ffmpeg_cmd/: ExampleInstrumentedTest.java
ffmpeg-cmd/src/main/: AndroidManifest.xml
ffmpeg-cmd/src/main/cpp/: CMakeLists.txt  android_log.h  ffmpeg_cmd.c  ffmpeg_cmd.h  ffmpeg_thread.c  native-lib.cpp
ffmpeg-cmd/src/main/cpp/ffmpeg/: cmdutils.h  config.h  ffmpeg.c  ffmpeg_mux.h  ffmpeg_opt.c  opt_common.c
ffmpeg-cmd/src/main/cpp/ffmpeg/graph/: graphprint.c  graphprint.h
ffmpeg-cmd/src/main/cpp/ffmpeg/resources/: graph_css.c  resman.h
ffmpeg-cmd/src/main/cpp/ffmpeg/textformat/: tf_mermaid.h
ffmpeg-cmd/src/main/cpp/include/libavdevice/: alldevices.c  indev_list.c
ffmpeg-cmd/src/main/java/com/jdpxiaoming/ffmpeg_cmd/: FFmepgTask.kt  FFmpegCmd.java  FFmpegCmd.kt  FFmpegFactory.java  FFmpegFactory.kt  FFmpegUtil.java  FFmpegUtil.kt  FLog.kt
ffmpeg-cmd/src/test/java/com/example/ffmpeg_cmd/: ExampleUnitTest.java
ffmpeg-cmd64/: build.gradle  gradle.properties
ffmpeg-cmd64/src/androidTest/java/com/poe/ffmpeg_cmd64/: ExampleInstrumentedTest.java
ffmpeg-cmd64/src/main/: AndroidManifest.xml
ffmpeg-cmd64/src/main/cpp/: CMakeLists.txt  android_log.h  ffmpeg_cmd.c  ffmpeg_cmd.h
ffmpeg-cmd64/src/main/cpp/ffmpeg/: cmdutils.c  config.h  ffmpeg.c  ffmpeg.h  ffmpeg_dec.c  opt_common.c
ffmpeg-cmd64/src/main/cpp/ffmpeg/graph/: graphprint.c
ffmpeg-cmd64/src/main/cpp/ffmpeg/resources/: graph_html.c  resman.c
ffmpeg-cmd64/src/main/cpp/ffmpeg/textformat/: tw_buffer.c
ffmpeg-cmd64/src/main/cpp/include/libavdevice/: outdev_list.c
ffmpeg-cmd64/src/main/cpp/include/libavformat/: internal.h
ffmpeg-cmd64/src/main/cpp/include/libavutil/: ffversion.h
ffmpeg-cmd64/src/main/java/com/poe/ffmpeg_cmd64/: Pragma.java
ffmpeg-cmd64/src/main/res/values/: strings.xml  themes.xml
ffmpeg-cmd64/src/main/res/values-night/: themes.xml
ffmpeg-cmd64/src/test/java/com/poe/ffmpeg_cmd64/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
tools/: gradle-bintray-upload.gradle
